--- a/q/272569.html
+++ b/q/272569.html
@@ -39,6 +39,17 @@
 <p>A full program that prints all of white's possible moves separated by space characters.</p>
 <p><strong><a href="https://tio.run/##y0rNyan8/z9e/9DWQ2uCDR817rF2dFWxfrhrh4q148Odi7yOTTzWZf1wd9fDXQtUuB41zFEIcgr0837UMLfgUeO@Cl3rR01rgBxb68P7Hu6c9nBHl0rUwx2Lwq1zT3UbcZkD@SAFuoe2Zh3ed3iG9sNdfTpZQAGDhzsXPNyxBKjy4c61xzapcFkUJDxq3OV6eMLDHfMPbY2PcQPqTH20cd2hRdqJh5a6Pdy5Cugyi2ObrA9PBOtbDDTEQcno0GKgiYGHdh5rP7oHKPJwdzeQNDy0DEgenpGoogmUdQOyS0CObNwGdLC/7sOdjUBzjXVMDy2x9v7/HwA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
 <h4>How?</h4>
+<p>For each pair of unequal locations form a list:</p>
+<pre><code>[ PawnCanCapture + (PawnCanCapture AND EndsAtEighthRank),
+  PawnCanPush + (PawnCanPush AND EndsAtEighthRank),
+  RookCanMove,
+  BishopCanMove,
+  QueenCanMove,
+  KnightCanMove,
+  KingCanMove,
+]
+</code></pre>
+<p>Then format these in the notation, using <code>2</code> to identify promotion, and prefix them with the two castle moves.</p>
 <p>Note: execution starts at the Main Link, at the bottom.</p>
 <pre><code>_/µ¬S1⁼;AE$;Ẹ$;AṢJƑƊ;ỊẠ$ - Link 1: [[StartFile, StartRank], [EndFile, EndRank]]
 _/                       - reduce by subtraction -&gt; [FileDelta, RankDelta]
