--- a/q/272523.html
+++ b/q/272523.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>069</td><td>sed r</td><td>240414T124105Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272568#272568">guest430</a></td></tr>
-<tr d-ix="1"><td>027</td><td>Python</td><td>240412T173636Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272526#272526">xnor</a></td></tr>
-<tr d-ix="2"><td>140</td><td>C++</td><td>240413T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272551#272551">Good Soy</a></td></tr>
+<tr d-ix="0"><td>005</td><td>05AB1E</td><td>240415T065037Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272596#272596">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>069</td><td>sed r</td><td>240414T124105Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272568#272568">guest430</a></td></tr>
+<tr d-ix="2"><td>027</td><td>Python</td><td>240412T173636Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272526#272526">xnor</a></td></tr>
 <tr d-ix="3"><td>013</td><td>Charcoal</td><td>240412T194016Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272530#272530">Neil</a></td></tr>
 <tr d-ix="4"><td>011</td><td>Uiua 0.11.0</td><td>240412T172145Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272524#272524">Tbw</a></td></tr>
 <tr d-ix="5"><td>160</td><td>Python</td><td>240413T165803Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272545#272545">Ali Moam</a></td></tr>
@@ -40,7 +40,33 @@
 <tr d-ix="11"><td>023</td><td>Perl 5 pl</td><td>240412T215553Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272532#272532">Xcali</a></td></tr>
 <tr d-ix="12"><td>031</td><td>Google Sheets</td><td>240412T211245Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272531#272531">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> -r, <s>72</s> 69 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 5 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>ŸÓøнà
+</code></pre>
+<p><a href="https://tio.run/##yy9OTMpM/f//6I7Dkw/vuLD38IL//6MNzXWMDGMB" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##ATIAzf9vc2FiaWX/dnk/IiDihpIgIj95/8W4w5PDuNC9w6D/LP9bWzE3LDIxXSxbMjIsMzddXQ" rel="nofollow noreferrer">verify both test cases</a>.</p>
+<p><strong>A port of <a href="https://codegolf.stackexchange.com/a/272526/52210"><em>@xnor</em>'s Python answer</a> is 5 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a> as well:</strong></p>
+<pre><code>(&amp;bg&lt;
+</code></pre>
+<p><a href="https://tio.run/##yy9OTMpM/f9fQy0p3eb/f0NzLiNDAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfWVQwn8NtaR0m/86/6OjDc11jAxjdaKNjHSMzWNjAQ" rel="nofollow noreferrer">verify both test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>Ÿ      # Convert the (implicit) input-pair to a list in that range
+ Ó     # Map each inner value to a list of exponents of its prime factorization
+  ø    # Zip/transpose; swapping rows/columns
+   н   # Pop and only leave the first column (exponents of prime 2)
+    à  # Pop and leave the maximum
+       # (which is output implicitly as result)
+</code></pre>
+
+<pre class="lang-python prettyprint-override"><code>(      # Negate the first (implicit) input: -a
+ &amp;     # Bitwise-AND it with the second (implicit) input: -a&amp;b
+  b    # Convert it to binary
+   g   # Pop and push its length
+    &lt;  # Decrease it by 1
+       # (after which it is output implicitly as result)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> -r, <s>72</s> 69 bytes</h1>
 <pre><code>s/(.*) (.*)/echo 2o{\1..\2}p|dc/e     #converts two numbers into a binary range
 s/.*1(0*)$/\1/gm                      #keep only the last 0s of each line
 s/.*/wc -L&lt;&lt;&lt;&quot;&amp;&quot;/e                    #num of chars in longest line
@@ -54,7 +80,7 @@ s/.*/wc -L&lt;&lt;&lt;&quot;&amp;&quot;/e                    #num of chars in lo
 <p>now we have binary numbers seperated by newlines. this next swap is <code>g</code>lobal and <code>m</code>ultiline. we capture a group of 0s prefixed by <code>1</code> and suffixed by <code>$</code>, ie the last string of 0s of each line, and replace the full line with that group.</p>
 <p>now we have 0s seperated by newlines. we take the full input and send it to <code>wc</code>(word count). <code>-L</code> gives the longest line, which is our output</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 27 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 27 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda a,b:len(bin(-a&amp;b))-3
 </code></pre>
@@ -71,26 +97,6 @@ s/.*/wc -L&lt;&lt;&lt;&quot;&amp;&quot;/e                    #num of chars in lo
 <pre class="lang-python prettyprint-override"><code>f=lambda a,b:-(a&gt;b)or-~f(-~a//2,b//2)
 </code></pre>
 <p><a href="https://tio.run/##ZZDPTsMwDMbP9CnCLrOFy3Ar1i6ivAYHxCHRlhJpc6ush3HZq5ckqzQkLr/P8Z/PVsaf6XuQuh3DPLvuaE52b5Qhq0sw7xaHUF4dlFez2VRkI3Du/3adzAWOBwHrBQSxvMfP4TwFP8L6ZY2o3BCUKC8qGOkPEEefGLEoUj69MNU@gRuqGAmqiurXqExtZJ3Z0C6yzWRqInfEqZm3xFv80sXDGLxM4LIhqZt2XZ91WWbuRzBxg7rIt9n/aeWdMm@dVUb2i9fj4qVvi1YfYZBeryh9Bc6/" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1>C++, 140 bites</h1>
-<pre><code>void main(argc,argv){
-
-int a = 17;
-int b =21;
-int max_zeros = 0;
-
-for(i=a, i&lt;b+1, ++i){
-
-    int num_zeros = a^b - 1;
-    max_zeros = max(max_zeros, num_zeros);
-}
-
-printf(&quot;$d&quot;, max_zeros);
-
-return EXIT_SUCCESS;
-
-}
-</code></pre>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 13 bytes</h1>
 <pre><code>Ｉ⌈Ｅ…·ＮＮ⌕⮌⍘ι²1
