--- a/q/272569.html
+++ b/q/272569.html
@@ -26,11 +26,100 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>140</td><td>Jelly</td><td>240415T021538Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272590#272590">Jonathan</a></td></tr>
-<tr d-ix="1"><td>264</td><td>JavaScript V8</td><td>240414T161721Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272573#272573">Arnauld</a></td></tr>
+<tr d-ix="0"><td>263</td><td>JavaScript V8</td><td>240414T161721Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272573#272573">Arnauld</a></td></tr>
+<tr d-ix="1"><td>140</td><td>Jelly</td><td>240415T021538Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272590#272590">Jonathan</a></td></tr>
 <tr d-ix="2"><td>166</td><td>Charcoal</td><td>240414T161820Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272575#272575">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 140 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 263 bytes</h1>
+<p>A full program that prints all possible white moves.</p>
+<pre class="lang-javascript prettyprint-override"><code>s=&quot;NBRQK&quot;
+g=(x,y)=&gt;&quot;abcdefgh&quot;[x]+-~y
+for(n=4**8;n--;k=h=(X-x)**2,V=Y-y,k+=v=V*V,!k|[k-5,b=h-v,h*v,b*h*v,k&gt;2,y-1|V-2|h][i]||i&gt;5&amp;&amp;!y|h^i&amp;1|V-1|Y&gt;6^i&gt;7||print(m))m=[s[i=n&gt;&gt;12]]+g(x=n&gt;&gt;6&amp;7,y=n&gt;&gt;9&amp;7)+&quot;-x&quot;[i&amp;i&gt;6]+g(X=n&amp;7,Y=n/8&amp;7)+(i&gt;7?&quot;=&quot;+s[i/2&amp;3]:n-10?&quot;&quot;:`
+O-O
+O-O-O`)
+</code></pre>
+<p><a href="https://tio.run/##ZZDLasMwEEX3@QpVCyPZUtK4zaMxo0Chq0JDuzAJrkMedWzFjhwi19gg@uuplS67mOEOZ@bC3OO23ur9RZ4rXk@vRVKhQuoKAYriAJ0vUlmtEQik@/pcyIrgT4Vp/1BeXrb7jNyQPemfv3U3UhpcNeC354/3V9xLgTSspSDwdrf/Sg5phqMm9vhP2@sMiIJH150GivMghwzIkjfUdX0Wwoq3LPeghtAN2V1uopyP2A4yXrPMrdnOtT0XPmv50ITcN1kcydgYKUaOc9eabC0dC4ZmJcZrKSbG3J4hJ0pPEOlIghJi6Mexl5LG6rEzYa0VT86Eepg3OJKOFGO7sATV0RWowdRC0vnNMWCvsxn4zkM8U3x4P8d4tukt@MIWX2zodV8qXRZJvyhTcouoSFRaZchDGJ3KOtGYBr1/S8dSqr@Quyh/AQ" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
+<p>(the test code redefines the <code>print</code> method in order to count the moves)</p>
+<h2>Explanation</h2>
+<h3>Encoding</h3>
+<p>Each move candidate is encoded as a single 16-bit value:</p>
+<pre><code>iiiiyyyxxxYYYXXX
+\__/\____/\____/
+  |    |     |
+  |    |     +--&gt; coordinates of target square
+  |    +--------&gt; coordinates of source square
+  +-------------&gt; index of move type
+</code></pre>
+<h3>Move conditions</h3>
+<p>For each source square at <span class="math-container">\$(x,y)\$</span> and each target square at <span class="math-container">\$(X,Y)\$</span>, we define:</p>
+<p><span class="math-container">$$h=(X-x)^2$$</span>
+<span class="math-container">$$\:V=Y-y$$</span>
+<span class="math-container">$$v=V^2$$</span></p>
+<p>For all moves, we must have <span class="math-container">\$h\neq0\$</span> or <span class="math-container">\$v\neq0\$</span>. For pawn moves, we must also have <span class="math-container">\$y\neq0\$</span>.</p>
+<p>The other conditions depend on the pieces and move types:</p>
+<div class="s-table-container"><table class="s-table">
+<thead>
+<tr>
+<th style="text-align: center;">Index</th>
+<th style="text-align: center;">Piece</th>
+<th style="text-align: center;">Condition</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align: center;">0</td>
+<td style="text-align: center;">knight</td>
+<td style="text-align: center;"><span class="math-container">\$h+v=5\$</span></td>
+</tr>
+<tr>
+<td style="text-align: center;">1</td>
+<td style="text-align: center;">bishop</td>
+<td style="text-align: center;"><span class="math-container">\$h=v\$</span></td>
+</tr>
+<tr>
+<td style="text-align: center;">2</td>
+<td style="text-align: center;">rook</td>
+<td style="text-align: center;"><span class="math-container">\$h=0\$</span> or <span class="math-container">\$v=0\$</span></td>
+</tr>
+<tr>
+<td style="text-align: center;">3</td>
+<td style="text-align: center;">queen</td>
+<td style="text-align: center;"><span class="math-container">\$h=v\$</span> or <span class="math-container">\$h=0\$</span> or <span class="math-container">\$v=0\$</span></td>
+</tr>
+<tr>
+<td style="text-align: center;">4</td>
+<td style="text-align: center;">king</td>
+<td style="text-align: center;"><span class="math-container">\$h+v\le2\$</span></td>
+</tr>
+<tr>
+<td style="text-align: center;">5</td>
+<td style="text-align: center;">pawn / move 2 squares</td>
+<td style="text-align: center;"><span class="math-container">\$y=1\$</span> and <span class="math-container">\$V=2\$</span> and <span class="math-container">\$h=0\$</span></td>
+</tr>
+<tr>
+<td style="text-align: center;">6</td>
+<td style="text-align: center;">pawn / move 1 square</td>
+<td style="text-align: center;"><span class="math-container">\$V=1\$</span> and <span class="math-container">\$h=0\$</span> and <span class="math-container">\$Y&lt;7\$</span></td>
+</tr>
+<tr>
+<td style="text-align: center;">7</td>
+<td style="text-align: center;">pawn / capture</td>
+<td style="text-align: center;"><span class="math-container">\$V=1\$</span> and <span class="math-container">\$h=1\$</span> and <span class="math-container">\$Y&lt;7\$</span></td>
+</tr>
+<tr>
+<td style="text-align: center;">8,10,12,14</td>
+<td style="text-align: center;">pawn / promotion</td>
+<td style="text-align: center;"><span class="math-container">\$V=1\$</span> and <span class="math-container">\$h=0\$</span> and <span class="math-container">\$Y=7\$</span></td>
+</tr>
+<tr>
+<td style="text-align: center;">9,11,13,15</td>
+<td style="text-align: center;">pawn / promotion + capture</td>
+<td style="text-align: center;"><span class="math-container">\$V=1\$</span> and <span class="math-container">\$h=1\$</span> and <span class="math-container">\$Y=7\$</span></td>
+</tr>
+</tbody>
+</table></div>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 140 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>_/µ¬S1⁼;AE$;Ẹ$;AṢJƑƊ;ỊẠ$
 “ RBQNK”p⁾x-;€”=;þṖḊ$ZḢW;mʋ2
 7Ḋ;€-µjþØ+Ẏ,j€0ṠḤḢṭƲ$
@@ -126,95 +215,6 @@ _\                                     - cumulative reduce by subtraction -&gt; 
                             K - join with space characters
                               - implicit, smashing print
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 264 bytes</h1>
-<p>A full program that prints all possible white moves.</p>
-<pre class="lang-javascript prettyprint-override"><code>s=&quot;NBRQK&quot;
-g=(x,y)=&gt;&quot;abcdefgh&quot;[x]+-~y
-for(n=66e3;n--;h=(X-x)**2,V=Y-y,v=V*V,[h+v-5,b=h-v,h*v,b*h*v,h+v&gt;2,y-1|V-2|h][i]||i&gt;5&amp;&amp;!y|h^i&amp;1|V-1|Y&gt;6^i&gt;7||h|v&amp;&amp;print(m))m=[s[i=n&gt;&gt;12]]+g(x=n&gt;&gt;6&amp;7,y=n&gt;&gt;9&amp;7)+&quot;-x&quot;[i&amp;i&gt;6]+g(X=n&amp;7,Y=n/8&amp;7)+(i&gt;7?&quot;=&quot;+s[i/2&amp;3]:n-10?&quot;&quot;:`
-O-O
-O-O-O`)
-</code></pre>
-<p><a href="https://tio.run/##ZVBda8IwFH3vr8jyEJI20VmxOksiDPY0mGwPRekqfqw2kZqK6UoLYX/dNe5xD/dy7j3nHrjntGt25nBVl5o1s1uZ16BUpgYcpFkMLlelHTaAC2AG5lKqGsNPDcngWF1fdgeJ75Q7GVy@TT8SEt8Mh2/PH@@v0Cs4bmlHuIC7/eErPxYSpm0WsJ/O6w2w5lGUj2PNWCw5XrGW@H5IE75mHW144ic0lUHDJnTPJWuo9Bu6913vtyKkHRvZhIVWZqnKrFVigtBDZ@VGIUeM7FpEGyWm1krbIHT/Bp8JOfPUpIprIUZhlgUFbh2O0JR2DjyhKQkga2GqkBKRE6y47tk118OZI3FvuoAcBr3NMETjbK7Z6HEB4XzrLdnSFVtuye1QaVOV@aCsCnzPqMx1UUsQAAjOVZMbSGLvn@hUKf2Xcp/lLw" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
-<p>(the test code redefines the <code>print</code> method in order to count the moves)</p>
-<h2>Explanation</h2>
-<h3>Encoding</h3>
-<p>Each move candidate is encoded as a single 16-bit value:</p>
-<pre><code>iiiiyyyxxxYYYXXX
-\__/\____/\____/
-  |    |     |
-  |    |     +--&gt; coordinates of target square
-  |    +--------&gt; coordinates of source square
-  +-------------&gt; index of move type
-</code></pre>
-<h3>Move conditions</h3>
-<p>For each source square at <span class="math-container">\$(x,y)\$</span> and each target square at <span class="math-container">\$(X,Y)\$</span>, we define:</p>
-<p><span class="math-container">$$h=(X-x)^2$$</span>
-<span class="math-container">$$\:V=Y-y$$</span>
-<span class="math-container">$$v=V^2$$</span></p>
-<p>For all moves, we must have <span class="math-container">\$h\neq0\$</span> or <span class="math-container">\$v\neq0\$</span>. For pawn moves, we must also have <span class="math-container">\$y\neq0\$</span>.</p>
-<p>The other conditions depend on the pieces and move types:</p>
-<div class="s-table-container"><table class="s-table">
-<thead>
-<tr>
-<th style="text-align: center;">Index</th>
-<th style="text-align: center;">Piece</th>
-<th style="text-align: center;">Condition</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align: center;">0</td>
-<td style="text-align: center;">knight</td>
-<td style="text-align: center;"><span class="math-container">\$h+v=5\$</span></td>
-</tr>
-<tr>
-<td style="text-align: center;">1</td>
-<td style="text-align: center;">bishop</td>
-<td style="text-align: center;"><span class="math-container">\$h=v\$</span></td>
-</tr>
-<tr>
-<td style="text-align: center;">2</td>
-<td style="text-align: center;">rook</td>
-<td style="text-align: center;"><span class="math-container">\$h=0\$</span> or <span class="math-container">\$v=0\$</span></td>
-</tr>
-<tr>
-<td style="text-align: center;">3</td>
-<td style="text-align: center;">queen</td>
-<td style="text-align: center;"><span class="math-container">\$h=v\$</span> or <span class="math-container">\$h=0\$</span> or <span class="math-container">\$v=0\$</span></td>
-</tr>
-<tr>
-<td style="text-align: center;">4</td>
-<td style="text-align: center;">king</td>
-<td style="text-align: center;"><span class="math-container">\$h+v\le2\$</span></td>
-</tr>
-<tr>
-<td style="text-align: center;">5</td>
-<td style="text-align: center;">pawn / move 2 squares</td>
-<td style="text-align: center;"><span class="math-container">\$y=1\$</span> and <span class="math-container">\$V=2\$</span> and <span class="math-container">\$h=0\$</span></td>
-</tr>
-<tr>
-<td style="text-align: center;">6</td>
-<td style="text-align: center;">pawn / move 1 square</td>
-<td style="text-align: center;"><span class="math-container">\$V=1\$</span> and <span class="math-container">\$h=0\$</span> and <span class="math-container">\$Y&lt;7\$</span></td>
-</tr>
-<tr>
-<td style="text-align: center;">7</td>
-<td style="text-align: center;">pawn / capture</td>
-<td style="text-align: center;"><span class="math-container">\$V=1\$</span> and <span class="math-container">\$h=1\$</span> and <span class="math-container">\$Y&lt;7\$</span></td>
-</tr>
-<tr>
-<td style="text-align: center;">8,10,12,14</td>
-<td style="text-align: center;">pawn / promotion</td>
-<td style="text-align: center;"><span class="math-container">\$V=1\$</span> and <span class="math-container">\$h=0\$</span> and <span class="math-container">\$Y=7\$</span></td>
-</tr>
-<tr>
-<td style="text-align: center;">9,11,13,15</td>
-<td style="text-align: center;">pawn / promotion + capture</td>
-<td style="text-align: center;"><span class="math-container">\$V=1\$</span> and <span class="math-container">\$h=1\$</span> and <span class="math-container">\$Y=7\$</span></td>
-</tr>
-</tbody>
-</table></div>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 166 bytes</h1>
 <pre><code>Ｅ35…O-ＩιＦ⁸Ｆ⁸Ｆ⁸ＦΦ⁸∨⁻λι⁻μκ«Ｅ⎇⁼⁵⁺Ｘ⁻λι²Ｘ⁻μκ²N⁺…K∧‹↔⁻λι²‹↔⁻μκ²⭆⁺…B⁼↔⁻λι↔⁻μκ…R∨⁼λι⁼μκ⁺νQ⪫⟦ν§βι⊕κ-§βλ⊕μ⟧ω¿∧⁼¹⁻μκ‹↔⁻λι²¿κＥ⎇⁼μ⁷⁺=⪪NBRQ¹⟦ω⟧⪫⟦§βι⊕κ§-x⁻λι§βλ⊕μν⟧ω¿⁼λι⟦⪫⟦ω2-¦4⟧§βι
