--- a/q/272569.html
+++ b/q/272569.html
@@ -26,11 +26,40 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>263</td><td>JavaScript V8</td><td>240414T161721Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272573#272573">Arnauld</a></td></tr>
-<tr d-ix="1"><td>140</td><td>Jelly</td><td>240415T021538Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272590#272590">Jonathan</a></td></tr>
-<tr d-ix="2"><td>166</td><td>Charcoal</td><td>240414T161820Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272575#272575">Neil</a></td></tr>
+<tr d-ix="0"><td>144</td><td>Charcoal</td><td>240414T161820Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272575#272575">Neil</a></td></tr>
+<tr d-ix="1"><td>263</td><td>JavaScript V8</td><td>240414T161721Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272573#272573">Arnauld</a></td></tr>
+<tr d-ix="2"><td>140</td><td>Jelly</td><td>240415T021538Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272590#272590">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 263 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>166</s> 144 bytes</h1>
+<pre><code>Ｅ35…O-ＩιＦ⁸Ｆ⁸Ｆ⁸Ｆ⁸«≔Ｘ⁻λι²θ≔Ｘ⁻μκ²η¿∨θη«≔§βιζＥ⎇⁼⁵⁺θηN⁺…K‹⁺θη³⭆⁺…B⁼θη…R¬∧θη⁺νQ⪫⟦νζ⊕κ-§βλ⊕μ⟧ω¿∧⁼μ⊕κ‹θ²¿κＥ⎇⁼μ⁷⁺=⪪NBRQ¹⟦ω⟧⪫⟦ζ⊕κ§-xθ§βλ⊕μν⟧ω¿¬θ⟦⪫⟦ω2-¦4⟧ζ
+</code></pre>
+<p><a href="https://tio.run/##hVLLbsIwEDzDV1g@rSVzKBS1UtUDoB5oy7s3lEMaDFg4DrFDA1R8e@oNSaEI1EhRtOvZ2ZlxgqVvgshXWTY0UifQ89dAG03KSWcXKNFZRq4e1LD2bQKSueepOo8MgUdGbn2/q5WWtXKhYRilwkBP6o0FxYlknNTdGzuSa5CQk1UBWSJEzgkMDMRY5rTlUCvp6pnYwueRc4/gysnChzDaNzt4iTe@stDkZKgc/ZGHE9qnRefM5ZvrvQtr4QTlpIHwSeKIF8h7OdN2M8WOkvvsdOxO@1ECLT0rjhGQc2gnYkSPjddIapi6zp6Trg6MCIVOxAwwCYrRn5lV7C8mZB4naX4plTwt3FUoCi/pWGEwxoRdnohfMXIzNkfwUAqmz07IZK1kArTfHo9cdYeE09T7tXBFfymd1rYUr/0fM5zo0g8RyopcIkYYs1Ln9LgrddnUMRx6Tz38ATyM4FA9ZFlW@1I/" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>Ｅ35…O-Ｉι
+</code></pre>
+<p>Output <code>O-O</code> and <code>O-O-O</code>.</p>
+<pre><code>Ｆ⁸Ｆ⁸Ｆ⁸Ｆ⁸«
+</code></pre>
+<p>Loop over all pairs of starting and destination squares.</p>
+<pre><code>≔Ｘ⁻λι²θ≔Ｘ⁻μκ²η¿∨θη«
+</code></pre>
+<p>Get the squared differences in the rows and columns, and check that at least one is non-zero.</p>
+<pre><code>≔§βιζ
+</code></pre>
+<p>Get the source file as a letter.</p>
+<pre><code>Ｅ⎇⁼⁵⁺θηN⁺…K‹⁺θη³⭆⁺…B⁼θη…R¬∧θη⁺νQ⪫⟦νζ⊕κ-§βλ⊕μ⟧ω
+</code></pre>
+<p>Check whether the knight, king, bishop, rook or queen can legally make that move, and if so output the move.</p>
+<pre><code>¿∧⁼μ⊕κ‹θ²
+</code></pre>
+<p>Check whether this might be a legal pawn move. (At this point we haven't checked for the pawn being on the back rank.)</p>
+<pre><code>¿κＥ⎇⁼μ⁷⁺=⪪NBRQ¹⟦ω⟧⪫⟦ζ⊕κ§-xθ§βλ⊕μν⟧ω
+</code></pre>
+<p>If the pawn is not on the back rank then output the pawn move, with any necessary promotion options.</p>
+<pre><code>¿¬θ⟦⪫⟦ω2-¦4⟧ζ
+</code></pre>
+<p>Otherwise if this is a plain move then output a doubled pawn move for this file.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 263 bytes</h1>
 <p>A full program that prints all possible white moves.</p>
 <pre class="lang-javascript prettyprint-override"><code>s=&quot;NBRQK&quot;
 g=(x,y)=&gt;&quot;abcdefgh&quot;[x]+-~y
@@ -119,7 +148,7 @@ O-O-O`)
 </tbody>
 </table></div>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 140 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 140 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>_/µ¬S1⁼;AE$;Ẹ$;AṢJƑƊ;ỊẠ$
 “ RBQNK”p⁾x-;€”=;þṖḊ$ZḢW;mʋ2
 7Ḋ;€-µjþØ+Ẏ,j€0ṠḤḢṭƲ$
@@ -215,29 +244,6 @@ _\                                     - cumulative reduce by subtraction -&gt; 
                             K - join with space characters
                               - implicit, smashing print
 </code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 166 bytes</h1>
-<pre><code>Ｅ35…O-ＩιＦ⁸Ｆ⁸Ｆ⁸ＦΦ⁸∨⁻λι⁻μκ«Ｅ⎇⁼⁵⁺Ｘ⁻λι²Ｘ⁻μκ²N⁺…K∧‹↔⁻λι²‹↔⁻μκ²⭆⁺…B⁼↔⁻λι↔⁻μκ…R∨⁼λι⁼μκ⁺νQ⪫⟦ν§βι⊕κ-§βλ⊕μ⟧ω¿∧⁼¹⁻μκ‹↔⁻λι²¿κＥ⎇⁼μ⁷⁺=⪪NBRQ¹⟦ω⟧⪫⟦§βι⊕κ§-x⁻λι§βλ⊕μν⟧ω¿⁼λι⟦⪫⟦ω2-¦4⟧§βι
-</code></pre>
-<p><a href="https://tio.run/##hVFNT8JAED3Dr9jsaZosB1AiifEARBNUvr2RHkpZZMOyxW2xEONvr7PtFmpTtEnbzNeb9974G0/7gSeTZKKFimDo7YHetCkj/ZMveX8TYDxumNgLIxAOPvf1daAJdBxS@X8SMuIaOoyMNQyFOoQgGREOI1mwY2RrYMhXvXZZ@sa18vQJHj8OngyhzchEYvMkiHkJpYVvMZ3imbSDXzqidrLA/wVzXbWCVx6G0F2GgTxEvAhqUavqGdscfh4h4XfDt7yjhzss9ysbKoFNoYAyo6lrFsgKtpEdsPIUap3SDOA5EAoWmOlGA7XiR1hmgwPla77jKuIrMBZRc8dCjyz17ByXkTi9cE2sCRjP7PLm7@tVe3XxEq9rALYOuXphBLrLxdAHJDbfSxEBHfVmU4yaBmgRu2d5/2jLy7RxpDnXs/N/SWZE5aoJlyFPiRcPkGtYZDxi9LFljKS31C1Z7rho3XeSJI1P@QM" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
-<pre><code>Ｅ35…O-Ｉι
-</code></pre>
-<p>Output <code>O-O</code> and <code>O-O-O</code>.</p>
-<pre><code>Ｆ⁸Ｆ⁸Ｆ⁸ＦΦ⁸∨⁻λι⁻μκ«
-</code></pre>
-<p>Loop over all pairs of starting and destination squares, except exclude the destination if it's the same square.</p>
-<pre><code>Ｅ⎇⁼⁵⁺Ｘ⁻λι²Ｘ⁻μκ²N⁺…K∧‹↔⁻λι²‹↔⁻μκ²⭆⁺…B⁼↔⁻λι↔⁻μκ…R∨⁼λι⁼μκ⁺νQ⪫⟦ν§βι⊕κ-§βλ⊕μ⟧ω
-</code></pre>
-<p>Check whether the knight, king, bishop, rook or queen can legally make that move, and if so output the move.</p>
-<pre><code>¿∧⁼¹⁻μκ‹↔⁻λι²
-</code></pre>
-<p>Check whether this might be a legal pawn move. (At this point we haven't checked for the pawn being on the back rank.)</p>
-<pre><code>¿κＥ⎇⁼μ⁷⁺=⪪NBRQ¹⟦ω⟧⪫⟦§βι⊕κ§-x⁻λι§βλ⊕μν⟧ω
-</code></pre>
-<p>If the pawn is not on the back rank then output the pawn move, with any necessary promotion options.</p>
-<pre><code>¿⁼λι⟦⪫⟦ω2-¦4⟧§βι
-</code></pre>
-<p>Otherwise if this is a plain move then output a doubled pawn move for this file.</p>
 </div>
 
 <table id="st">
