--- a/q/272569.html
+++ b/q/272569.html
@@ -26,36 +26,33 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>144</td><td>Charcoal</td><td>240414T161820Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272575#272575">Neil</a></td></tr>
+<tr d-ix="0"><td>139</td><td>Charcoal</td><td>240414T161820Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272575#272575">Neil</a></td></tr>
 <tr d-ix="1"><td>263</td><td>JavaScript V8</td><td>240414T161721Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272573#272573">Arnauld</a></td></tr>
 <tr d-ix="2"><td>140</td><td>Jelly</td><td>240415T021538Z</td><td><a href="https://codegolf.stackexchange.com/questions/272569/print-all-legal-chess-moves/272590#272590">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>166</s> 144 bytes</h1>
-<pre><code>Ｅ35…O-ＩιＦ⁸Ｆ⁸Ｆ⁸Ｆ⁸«≔Ｘ⁻λι²θ≔Ｘ⁻μκ²η¿∨θη«≔§βιζＥ⎇⁼⁵⁺θηN⁺…K‹⁺θη³⭆⁺…B⁼θη…R¬∧θη⁺νQ⪫⟦νζ⊕κ-§βλ⊕μ⟧ω¿∧⁼μ⊕κ‹θ²¿κＥ⎇⁼μ⁷⁺=⪪NBRQ¹⟦ω⟧⪫⟦ζ⊕κ§-xθ§βλ⊕μν⟧ω¿¬θ⟦⪫⟦ω2-¦4⟧ζ
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>166</s> <s>144</s> 139 bytes</h1>
+<pre><code>Ｅ35…O-ＩιＦ…β⁸Ｆ⁸Ｆ…β⁸Ｆ⁸«≔Ｘ⁻℅λ℅ι²θ≔Ｘ⁻μκ²η¿∨θη«Ｅ⎇⁼⁵⁺θηN⁺…K‹⁺θη³⭆⁺…B⁼θη…R¬∧θη⁺νQ⪫⟦νι⊕κ-λ⊕μ⟧ω¿∧⁼μ⊕κ‹θ²¿κＥ⎇⁼μ⁷⁺=⪪NBRQ¹⟦ω⟧⪫⟦ι⊕κ§-xθλ⊕μν⟧ω¿¬θ⟦Σ⟦ι2-λ4
 </code></pre>
-<p><a href="https://tio.run/##hVLLbsIwEDzDV1g@rSVzKBS1UtUDoB5oy7s3lEMaDFg4DrFDA1R8e@oNSaEI1EhRtOvZ2ZlxgqVvgshXWTY0UifQ89dAG03KSWcXKNFZRq4e1LD2bQKSueepOo8MgUdGbn2/q5WWtXKhYRilwkBP6o0FxYlknNTdGzuSa5CQk1UBWSJEzgkMDMRY5rTlUCvp6pnYwueRc4/gysnChzDaNzt4iTe@stDkZKgc/ZGHE9qnRefM5ZvrvQtr4QTlpIHwSeKIF8h7OdN2M8WOkvvsdOxO@1ECLT0rjhGQc2gnYkSPjddIapi6zp6Trg6MCIVOxAwwCYrRn5lV7C8mZB4naX4plTwt3FUoCi/pWGEwxoRdnohfMXIzNkfwUAqmz07IZK1kArTfHo9cdYeE09T7tXBFfymd1rYUr/0fM5zo0g8RyopcIkYYs1Ln9LgrddnUMRx6Tz38ATyM4FA9ZFlW@1I/" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<p><a href="https://tio.run/##dVFNb8IwDD3Dr4hycqRwGAwNadoB0A5s43s31ENHA0SkKU3KAE389s4p6WAIKlWt7efn9@z5KjTzJFR5PjJSZ9APN0AbTcpJ9zBXortKMB7WXBzaDCTD57m6SAyBM@CLkxZjpMi2/Pdu9adaaVsrlxpGyU4Y6Eu9tTA0kdShAsU4Kf9xGCd1fFMceasp5mTtISsHkQuCRJC6sBhUOZv6FEaH5gCv6TZUFpqcjBRSnLCc0AH1mQvf75j7ENbCGcpJw8GnGRIvHe91Twd7/IyS@6I6weogyaCtI192gIJDo4gxPSXeEqlhhhnJSU/PjYiFzkQEzi11x1D/8zELONkVp6kUW3D8XkV8TcG8qdRtDvfk8GtG7q4KCZ5KkfQFh083SmZAB53JGKMHRzjbBX@yb2huZz0diT3Q2p66c94wwIkuPRChrChkuVWlrNQ2m27jgp7W/Q7oIw1Y4Fwfq8c8z2vf6hc" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
 <pre><code>Ｅ35…O-Ｉι
 </code></pre>
 <p>Output <code>O-O</code> and <code>O-O-O</code>.</p>
-<pre><code>Ｆ⁸Ｆ⁸Ｆ⁸Ｆ⁸«
+<pre><code>Ｆ…β⁸Ｆ⁸Ｆ…β⁸Ｆ⁸«
 </code></pre>
-<p>Loop over all pairs of starting and destination squares.</p>
-<pre><code>≔Ｘ⁻λι²θ≔Ｘ⁻μκ²η¿∨θη«
+<p>Loop over all pairs of starting and destination squares, with the ranks 0-indexed for now.</p>
+<pre><code>≔Ｘ⁻℅λ℅ι²θ≔Ｘ⁻μκ²η¿∨θη«
 </code></pre>
-<p>Get the squared differences in the rows and columns, and check that at least one is non-zero.</p>
-<pre><code>≔§βιζ
-</code></pre>
-<p>Get the source file as a letter.</p>
-<pre><code>Ｅ⎇⁼⁵⁺θηN⁺…K‹⁺θη³⭆⁺…B⁼θη…R¬∧θη⁺νQ⪫⟦νζ⊕κ-§βλ⊕μ⟧ω
+<p>Get the squared differences in the ranks and files, and check that at least one is non-zero.</p>
+<pre><code>Ｅ⎇⁼⁵⁺θηN⁺…K‹⁺θη³⭆⁺…B⁼θη…R¬∧θη⁺νQ⪫⟦νι⊕κ-λ⊕μ⟧ω
 </code></pre>
 <p>Check whether the knight, king, bishop, rook or queen can legally make that move, and if so output the move.</p>
 <pre><code>¿∧⁼μ⊕κ‹θ²
 </code></pre>
 <p>Check whether this might be a legal pawn move. (At this point we haven't checked for the pawn being on the back rank.)</p>
-<pre><code>¿κＥ⎇⁼μ⁷⁺=⪪NBRQ¹⟦ω⟧⪫⟦ζ⊕κ§-xθ§βλ⊕μν⟧ω
+<pre><code>¿κＥ⎇⁼μ⁷⁺=⪪NBRQ¹⟦ω⟧⪫⟦ι⊕κ§-xθλ⊕μν⟧ω
 </code></pre>
 <p>If the pawn is not on the back rank then output the pawn move, with any necessary promotion options.</p>
-<pre><code>¿¬θ⟦⪫⟦ω2-¦4⟧ζ
+<pre><code>¿¬θ⟦Σ⟦ι2-λ4
 </code></pre>
 <p>Otherwise if this is a plain move then output a doubled pawn move for this file.</p>
 </div>
