--- a/q/272560.html
+++ b/q/272560.html
@@ -26,10 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>082</td><td>JavaScript V8</td><td>240414T074951Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272561#272561">l4m2</a></td></tr>
-<tr d-ix="1"><td>011</td><td>05AB1E</td><td>240414T084259Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272563#272563">Neil</a></td></tr>
+<tr d-ix="0"><td>008</td><td>05AB1E</td><td>240414T084259Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272563#272563">Neil</a></td></tr>
+<tr d-ix="1"><td>082</td><td>JavaScript V8</td><td>240414T074951Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272561#272561">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 82 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, <s>11</s> 8 bytes</h1>
+<pre><code>∞ʒÓüÆƶO_
+</code></pre>
+<p><a href="https://tio.run/##ARkA5v9vc2FiaWX//@KInsqSw5PDvMOGxrZPX///" rel="nofollow noreferrer" title="05AB1E – Try It Online">Try it online!</a> Outputs the infinite sequence (well on TIO it will time out after about <code>18000</code>). Explanation: Port of @att's formula (numbers where the dot product of the prime factorisation exponents with the sequence of nonzero integers in order of absolute value is zero). Edit: Saved 3 bytes with help from @KevinCruijssen.</p>
+<pre><code>∞           Infinite sequence of positive integers
+ ʒ          Filtered where
+  Ó         Exponents of prime factorisation
+   üÆ       Reduce pairs by subtraction
+     ƶ      Multiply each value by its index (1-indexed)
+      O_    Has zero sum
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 82 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>for(i=0,g=x=&gt;x%k?k&lt;i&amp;&amp;g(x,g[-i%k++||i]=z+=!g[k]):z^g(x/k);k=2;z=1)g(++i)||print(i)
 </code></pre>
@@ -37,11 +49,6 @@
 <p>att's method but on <span class="math-container">\$\mathbb F_2^\infty\$</span> rather than <span class="math-container">\$\mathbb Z\$</span></p>
 <hr />
 <p>cardinality: Map Z to P, still 2<sup>N</sup></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 11 bytes</h1>
-<pre><code>∞ʒÓ∞D(.ι*O_
-</code></pre>
-<p><a href="https://tio.run/##yy9OTMpM/f//Uce8U5MOTwZSLhp653Zq@cf//w8A" rel="nofollow noreferrer" title="05AB1E – Try It Online">Try it online!</a> Outputs the infinite sequence (well on TIO it will time out after about <code>3000</code>). Explanation: Port of @att's formula (numbers where the dot product of the prime factorisation exponents with the sequence of nonzero integers in order of absolute value is zero).</p>
 </div>
 
 <table id="st">
