--- a/q/272452.html
+++ b/q/272452.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>090</td><td>Hussy.Net</td><td>240415T010516Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272587#272587">Hazel へい</a></td></tr>
-<tr d-ix="1"><td>076</td><td>Perl 5</td><td>240411T202146Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272502#272502">Martin K</a></td></tr>
+<tr d-ix="0"><td>076</td><td>Perl 5</td><td>240411T202146Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272502#272502">Martin K</a></td></tr>
+<tr d-ix="1"><td>090</td><td>Hussy.Net</td><td>240415T010516Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272587#272587">Hazel へい</a></td></tr>
 <tr d-ix="2"><td>074</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
 <tr d-ix="3"><td>143</td><td>JavaScript Node.js</td><td>240411T225628Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272505#272505">2pichar</a></td></tr>
 <tr d-ix="4"><td>085</td><td>Ruby</td><td>240411T070528Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272490#272490">G B</a></td></tr>
@@ -46,7 +46,14 @@
 <tr d-ix="17"><td>026</td><td>05AB1E</td><td>240410T082537Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272466#272466">Kevin Cr</a></td></tr>
 <tr d-ix="18"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/tacosontitan/Hussy.Net" rel="nofollow noreferrer">Hussy.Net</a>, 90 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 76 bytes</h1>
+
+<pre class="lang-perl prettyprint-override"><code>sub c{$_%$_[0]?0:($_/=$_[0],1+&amp;c)}say'Fizz'x c(5).'Buzz'x c(3)||$_ for 1..&lt;&gt;
+</code></pre>
+<p><a href="https://tio.run/##K0gtyjH9/7@4NEkhuVolXlUlPtog1t7ASkMlXt8WzNEx1FZL1qwtTqxUd8usqlKvUEjWMNXUU3cqhXKMNWtqVOIV0vKLFAz19Gzs/v83NviXX1CSmZ9X/F/X11TPwBAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
+<p>(I was tempted to post <code>eval&lt;&gt;</code> <em>(6 bytes)</em> with some carefully crafted input, but I suspect there's already a rule against that.)</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/tacosontitan/Hussy.Net" rel="nofollow noreferrer">Hussy.Net</a>, 90 bytes</h1>
 <pre class="lang-csharp prettyprint-override"><code>Gr(N).E(i=&gt;{string e = null;F(i,Md3,Dv3,_=&gt;e+=&quot;Fizz&quot;);F(i,Md5,Dv5,_=&gt;e+=&quot;Buzz&quot;);W(e,i);});
 </code></pre>
 <h2>Explanation</h2>
@@ -73,12 +80,6 @@
 <pre class="lang-cs prettyprint-override"><code>for(int i=1;i&lt;=n;i++){int f=i,b=i;string e=null;for(;f%3&lt;1;f/=3)e+=&quot;Fizz&quot;;for(;b%5&lt;1;b/=5)e+=&quot;Buzz&quot;;Console.WriteLine(e??$&quot;{i}&quot;);}
 </code></pre>
 <p><a href="https://tio.run/##Nc3NCoJAFAXgfU9xkQTF/sXV7RIUtCoIWrQebZQL00zMjEGKz25atDpwvgOncPPCWNnXjnUF17fz8oGTybPOFRdQKOEcXKyprHhA@6@dF36Il@E7nAXrKB7sJSxoINisVtiXxkasPTCtkbekkZMkbsemJJ7lxOi8HR8l6VopHPdYhul2jeWS0lgmFBy5aYKf5GE2SL6k7Cv7epSD0c4oubhZ9vLEWkZyt5sGLXdBjF3fdf0H" rel="nofollow noreferrer" title="C# (.NET Core) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 76 bytes</h1>
-
-<pre class="lang-perl prettyprint-override"><code>sub c{$_%$_[0]?0:($_/=$_[0],1+&amp;c)}say'Fizz'x c(5).'Buzz'x c(3)||$_ for 1..&lt;&gt;
-</code></pre>
-<p><a href="https://tio.run/##K0gtyjH9/7@4NEkhuVolXlUlPtog1t7ASkMlXt8WzNEx1FZL1qwtTqxUd8usqlKvUEjWMNXUU3cqhXKMNWtqVOIV0vKLFAz19Gzs/v83NviXX1CSmZ9X/F/X11TPwBAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1>JavaScript, <s>81 78</s> 74 bytes</h1>
 <p>-4 bytes thanks to myself...<br />
